--- a/app/views/debug.html
+++ b/app/views/debug.html
@@ -41,7 +41,7 @@
 	{{end}}
 	</dl>
 </div>
-<a id="toggleSidebar" href="#" class="toggles"><span class="glyphicon glyphicon-arrow-left"></span></a>
+<a id="toggleSidebar" href="#" class="toggles"><img class="" src="/public/icons/arrow-both.svg" alt="" width="24" height="24"></a>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script type="text/javascript">
