--- a/app/views/errors/404.html
+++ b/app/views/errors/404.html
@@ -12,7 +12,7 @@
 		</p>
 	{{end}}
 	</div>
-	<div class="col-xs-1">
+	<div class="col-1">
 	{{template "App/social.html" .}}
 	</div>
 </div><!-- /.row -->
