--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -1,20 +1,23 @@
 {{if eq .post.ID -1}}{{set . "title" "Create a new Post"}}{{else}}{{set . "title" "Edit Post"}}{{end}}
 {{append . "moreScripts" "/public/js/Markdown.Converter.js"}}
 {{append . "moreScripts" "/public/js/Markdown.Extra.js"}}
-{{append . "moreScripts" "//cdn.jsdelivr.net/ace/1.1.9/min/ace.js"}}
+{{append . "moreScripts" "/public/js/ace/ace.js"}}
+{{append . "moreScripts" "/public/js/admin.js"}}
 {{template "header.html" .}}
 <div class="row">
 	<div class="col-sm-7 col-md-9">
-		<ol class="breadcrumb">
-			<li><a href="/admin">Admin Panel</a></li>
-			<li class="active">{{.title}}</li>
-		</ol>
+		<nav aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="/admin">Admin Panel</a></li>
+				<li class="breadcrumb-item active" aria-current="page">{{.title}}</li>
+			</ol>
+		</nav>
 	</div>
 	<div class="col-sm-5 col-md-3">
-		<div class="btn-group pull-right" role="group" aria-label="Preview Mode">
-  		<button id="mode-edit" type="button" class="btn btn-default"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Edit</button>
-		  <button id="mode-split" type="button" class="btn btn-default active"><span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span> Split</button>
-		  <button id="mode-preview" type="button" class="btn btn-default"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Preview</button>
+		<div class="btn-group mt-1 float-right" role="group" aria-label="Preview Mode">
+			<button id="mode-edit" type="button" class="btn btn-secondary">Edit</button>
+			<button id="mode-split" type="button" class="btn btn-secondary active">Split</button>
+			<button id="mode-preview" type="button" class="btn btn-secondary">Preview</button>
 		</div>
 	</div>
 </div>
@@ -22,40 +25,43 @@
 	{{/*
 	<div class="col-sm-2">
 		{{set . "pp" 1}} {{template "Admin/adminMenu.html" .}}
-	</div>*/}}
-	<div class="col-sm-6" id="container-editor">
-		<form role="form" method="POST" action="/admin/post/{{.post.ID}}">
-			<div class="form-group">
-				<label for="inputTitle" class="sr-only">Title</label>
-				<input type="text" class="form-control" id="inputTitle" name="post.Title" placeholder="Titel" value="{{.post.Title}}" />
-			</div>
-			<div class="form-group">
-				<label for="editorACE" class="sr-only">Content</label>
-				<div id="editorACE">{{.post.Body}}</div>
-				<textarea id="editorTextarea" name="post.Body" style="display:none"></textarea>
-			</div>
-			<div class="checkbox">
-				<label>
-					<input type="checkbox" name="post.Published" value="true" {{if .post.Published}}checked{{end}} /> Published (publicly visible)
-				</label>
-			</div>
-			<div class="form-group">
-				<label for="inputCreatedAt">Creation Date (Used for sorting)</label>
-				<input type="text" class="form-control" id="inputCreatedAt" name="post.CreatedAt" placeholder="2015.01.20" value="{{date .post.CreatedAt}}" />
-			</div>
-			<input type="hidden" value="{{.post.ID}}" name="post.ID" />
-			<button type="submit" class="btn btn-default">Save</button>
-		</form>
-	</div>
-	<div class="col-sm-6"  id="container-preview">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h2 class="panel-title" id="titlePreview"></h2>
-			</div>
-			<div class="panel-body" id="editorPreview">
-			</div>
+</div>*/}}
+<div class="col-sm-6" id="container-editor">
+	<form role="form" method="POST" action="/admin/post/{{.post.ID}}">
+		<div class="form-group">
+			<label for="inputTitle" class="sr-only">Title</label>
+			<input type="text" class="form-control" id="inputTitle" name="post.Title" placeholder="Titel"
+				value="{{.post.Title}}" />
 		</div>
+		<div class="form-group">
+			<label for="editorACE" class="sr-only">Content</label>
+			<div id="editorACE">{{.post.Body}}</div>
+			<textarea id="editorTextarea" name="post.Body" style="display:none"></textarea>
+		</div>
+		<div class="checkbox">
+			<label>
+				<input type="checkbox" name="post.Published" value="true" {{if .post.Published}}checked{{end}} />
+				Published (publicly visible)
+			</label>
+		</div>
+		<div class="form-group">
+			<label for="inputCreatedAt">Creation Date (Used for sorting)</label>
+			<input type="text" class="form-control" id="inputCreatedAt" name="post.CreatedAt" placeholder="2015.01.20"
+				value="{{date .post.CreatedAt}}" />
+		</div>
+		<input type="hidden" value="{{.post.ID}}" name="post.ID" />
+		<button type="submit" class="btn btn-secondary">Save</button>
+	</form>
+</div>
+<div class="col-sm-6" id="container-preview">
+	<div class="card">
+		<h3 class="card-header" id="titlePreview">
+			</h2>
+			<div class="card-body">
+				<p class="card-text" id="editorPreview"></p>
+			</div>
 	</div>
+</div>
 </div>
 
 <script type="text/javascript">
@@ -64,30 +70,30 @@
 		else if (element.attachEvent) element.attachEvent('on' + event, fn);
 	}
 
-	window.onload = function() {
+	window.onload = function () {
 		// Initialize the ACE editor
-		var editor = ace.edit("editorACE");
+		let editor = ace.edit("editorACE");
 		editor.setTheme("ace/theme/github");
 		editor.setShowPrintMargin(false);
-		var session = editor.getSession();
+		let session = editor.getSession();
 		session.setMode("ace/mode/markdown");
 		session.setUseWrapMode(true);
 		//session.setWrapLimitRange(70, 250);
 
 		// Initialize the markdown preview
-		var converter = new Markdown.Converter();
+		let converter = new Markdown.Converter();
 		Markdown.Extra.init(converter, {
 			extensions: ["tables", "fenced_code_gfm"]
 		});
 
-		var preview = $("#editorPreview");
-		var textarea = $("#editorTextarea");
-		var enablePreview = true;
-		var updatePreview = function() {
+		let preview = $("#editorPreview");
+		let textarea = $("#editorTextarea");
+		let enablePreview = true;
+		let updatePreview = function () {
 			if (enablePreview) {
 				textarea.val(editor.getSession().getValue());
 				preview.html(converter.makeHtml(editor.getSession().getValue()));
-				$('pre code').each(function(i, e) {
+				$('pre code').each(function (i, e) {
 					hljs.highlightBlock(e)
 				});
 			}
@@ -96,7 +102,7 @@
 		updatePreview();
 
 		// Update the Post title
-		$("#inputTitle").keyup(function() {
+		$("#inputTitle").keyup(function () {
 			$("#titlePreview").text($(this).val());
 		});
 		$("#inputTitle").keyup();
@@ -105,7 +111,7 @@
 		var activeButton = $("#mode-split");
 		editorContainer = $('#container-editor');
 		previewContainer = $('#container-preview');
-		$("#mode-edit, #mode-split, #mode-preview").click(function(event) {
+		$("#mode-edit, #mode-split, #mode-preview").click(function (event) {
 			enablePreview = true;
 			if (event.target.id === "mode-edit") {
 				editorContainer.show();
@@ -128,7 +134,7 @@
 			}
 
 			if (activeButton) activeButton.removeClass("active");
-			activeButton = $( event.target );
+			activeButton = $(event.target);
 			activeButton.addClass("active");
 		});
 		// Hack to default to no preview on phones
