--- a/app/views/Admin/EditProject.html
+++ b/app/views/Admin/EditProject.html
@@ -7,7 +7,7 @@
 {{template "header.html" .}}
 
 <div class="row">
-	<div class="col-sm-10 col-sm-offset-2">
+	<div class="col-12">
 		<ol class="breadcrumb">
 		  <li><a href="/admin">Admin Panel</a></li>
 		  <li class="active">{{.title}}</li>
@@ -48,7 +48,7 @@
 			</div>
 
 			<input type="hidden" name="project.ID" value="{{.project.ID}}" />
-			<button type="submit" class="btn btn-default">Save</button>
+			<button type="submit" class="btn btn-secondary">Save</button>
 		</form>
 	</div>
 </div>
