--- a/app/views/Admin/EditUser.html
+++ b/app/views/Admin/EditUser.html
@@ -7,11 +7,13 @@
 {{template "header.html" .}}
 
 <div class="row">
-	<div class="col-sm-10 col-sm-offset-2">
-		<ol class="breadcrumb">
-		  <li><a href="/admin">Admin Panel</a></li>
-		  <li class="active">{{.title}}</li>
-		</ol>
+	<div class="col-12">
+		<nav aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="/admin">Admin Panel</a></li>
+				<li class="breadcrumb-item active" aria-current="page">{{.title}}</li>
+			</ol>
+		</nav>
 	</div>
 </div>
 <div class="row">
@@ -41,7 +43,7 @@
 				<input type="password" class="form-control" id="inputUserPassword" name="password" placeholder="Password" value="" />
 			</div>
 			<input type="hidden" name="userID" value={{.profile.ID}} />
-			<button type="submit" class="btn btn-default">Save</button>
+			<button type="submit" class="btn btn-secondary">Save</button>
 		</form>
 	</div>
 </div>
