--- a/app/views/Admin/Media.html
+++ b/app/views/Admin/Media.html
@@ -1,13 +1,16 @@
 {{set . "title" "Uploaded Files"}}
 {{append . "moreStyles" "/public/css/dropzone.css"}}
 {{append . "moreScripts" "/public/js/dropzone.js"}}
+{{append . "moreScripts" "/public/js/admin.js"}}
 {{template "header.html" .}}
 <div class="row">
-	<div class="col-sm-10 col-sm-offset-2">
-		<ol class="breadcrumb">
-		  <li><a href="/admin">Admin Panel</a></li>
-		  <li class="active">{{.title}}</li>
-		</ol>
+	<div class="col-12">
+		<nav aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="/admin">Admin Panel</a></li>
+				<li class="breadcrumb-item active" aria-current="page">{{.title}}</li>
+			</ol>
+		</nav>
 	</div>
 </div>
 <div class="row">
@@ -31,8 +34,8 @@
 		            <td>{{.Name}}</td>
 					<td>{{.Size}} Bytes</td>
 					<td>
-						<a title="View this file" href="/uploads/{{urlquery .Name}}" class="btn btn-primary btn-sm">View</a>
-						<a title="Delete this file" href="/admin/media/{{urlquery .Name}}/delete" class="btn btn-danger btn-sm">Delete</a>
+						<a title="View file" href="/uploads/{{urlquery .Name}}" class="btn btn-primary btn-sm">View</a>
+						<span title="Delete file" href="/admin/media/{{urlquery .Name}}" class="btn btn-danger btn-sm btn-delete">Delete</a>
 					</td>
 				</tr>
 				{{end}}
@@ -42,7 +45,7 @@
 		<form action="/admin/media/upload" class="dropzone" id="myAwesomeDropzone" method="POST" enctype="multipart/form-data">
 			<div class="fallback">
     			<input name="file" type="file" multiple />
-				<button type="submit" class="btn btn-default">Save</button>
+				<button type="submit" class="btn btn-secondary">Save</button>
   			</div>
 		</form>
 
