--- a/app/views/Admin/Projects.html
+++ b/app/views/Admin/Projects.html
@@ -1,18 +1,23 @@
-{{set . "title" "Admin Panel"}} {{template "header.html" .}}
+{{set . "title" "Projects"}} 
+{{append . "moreScripts" "/public/js/admin.js"}}
+{{template "header.html" .}}
 
 <div class="row">
-  <div class="col-sm-10 col-sm-offset-2">
-    <ol class="breadcrumb">
-      <li class="active">Admin Panel</li>
-    </ol>
+  <div class="col-12">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/admin">Admin Panel</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{.title}}</li>
+      </ol>
+    </nav>
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-2">
+  <div class="col-2">
     {{ set . "pp" 4}} {{template "Admin/adminMenu.html" .}}
   </div>
   {{$user := .user}}
-  <div class="col-sm-10">
+  <div class="col-10">
     <h3>Projects</h3><a href="/admin/projects/create">Create new</a>
     <table class="table table-hover">
       <thead>
@@ -25,13 +30,14 @@
       </thead>
       <tbody>
         {{range .projects}}
-        <tr {{if .Hidden}}class="info"{{end}}>
+        <tr id="project-{{.ID}}" {{if .Hidden}}class="table-info"{{end}}>
           <td>{{.Title}}</td>
           <td><img src="{{.CoverUrl}}" alt="Project Logo"></td>
           <td>{{.Tags}}</td>
           {{if $user.IsAdmin}}<td>
             <a href="/admin/projects/{{.ID}}" class="btn btn-primary btn-sm">Edit</a>
-            <a href="/admin/projects/{{.ID}}/delete" class="btn btn-danger btn-sm">Delete</a>
+            <span class="btn btn-danger btn-sm btn-delete" 
+                  data-href="/admin/projects/{{.ID}}" data-hide="#project-{{.ID}}">Delete</a>
           </td>{{end}}
         </tr>
         {{end}}
