--- a/app/views/App/Search.html
+++ b/app/views/App/Search.html
@@ -6,13 +6,13 @@
 	
 	{{range .posts}}
 		<article>
-		<div class="panel panel-default">
-		  <div class="panel-heading">
-			<h3 class="panel-title">{{.Title}}<small class="pull-right">{{datetime .UpdatedAt}}</small></h3>
-			<small>By {{username .UserID}}</small>
+		<div class="card">
+		  <div class="card-header">
+			<h3 class="card-title">{{.Title}}<small class="pull-right">{{datetime .UpdatedAt}}</small></h3>
+			<h6 class="card-subtitle">By {{username .UserID}}</h6>
 		  </div>
-		  <div class="panel-body">
-		    {{markdown .Body}}
+		  <div class="card-body">
+		    <p class="card-text">{{markdown .Body}}</p>
 		  </div>
 		</div>
 		</article>
