--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,32 +1,45 @@
-<footer class="row">
-	<span style="line-height:35px">&copy; 2015 Simon P. Grätzer</span>
-	{{if not .user}}
-	<form class="form-inline pull-right" role="form" action="/login" method="POST">
-		<div class="form-group">
-			<label class="sr-only" for="loginInputUser">Your Email Address</label>
-			<input type="email" class="form-control" id="loginInputUser" name="email" placeholder="Email">
-		</div>
-		<div class="form-group">
-			<label class="sr-only" for="loginInputPassword">Password</label>
-			<input type="password" class="form-control" id="loginInputPassword" name="password" placeholder="Password">
-		</div>
-		{{/*
-		<div class="checkbox">
-			<label>
-				<input type="checkbox"> Remember me</label>
-		</div>*/}}
-		<button type="submit" class="btn btn-info">Sign in</button>
-	</form>
-	{{else}}
-	<form class="form-inline pull-right" role="form" action="/logout" method="POST">
-		<div class="form-group">
-			Logged in as <a href="/admin/user/{{urlquery .user.Email}}">{{.user.Name}}</a>
-			<button type="submit" class="btn btn-info">Logout</button>
-		</div>
-	</form>
-	{{end}}
-</footer>
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+	<div class="row">
+	  <div class="col-12 col-md-2">
+		<button type="button" class="btn btn-outline-secondary mb-2 mx-4">G</button>
+		<small class="d-block text-muted">&copy; 2017-2020</small>
+		<small class="d-block mb-3 text-muted">Simon P. Grätzer</small>
+	  </div>
+	  <div class="col-6 col-md-3">
+		<h5>Resources</h5>
+		<ul class="list-unstyled text-small">
+		  <li><a class="text-muted" href="/projects">Projects</a></li>
+		  <li><a class="text-muted" href="/experience">Work Experience</a></li>
+		  {{if .user}}
+		  <li><a class="text-muted" href="/admin">Admin Section</a></li>
+		  {{else}}
+		  <li><a class="text-muted" href="/login">Admin Section</a></li>
+		  {{end}}
+		</ul>
+	  </div>
+	  <div class="col-6 col-md-3">
+		<h5>About</h5>
+		<ul class="list-unstyled text-small">
+		  <li><a class="text-muted" href="/about">About Me</a></li>
+		  <li><a class="text-muted" href="/projects">Projects</a></li>
+		  <li><a class="text-muted" href="/experience">Experience</a></li>
+		  <li><a class="text-muted" href="https://rwth-aachen.de">Where I studied</a></li>
+		  <li><a class="text-muted" href="https://arangodb.com">Where I work</a></li>
+		</ul>
+	  </div>
+	</div>
+	{{/*{{if .user}}
+		<form class="form-inline" role="form" action="/logout" method="POST">
+			<div class="form-group">
+				Logged in as <a href="/admin/user/{{urlquery .user.Email}}">{{.user.Name}}</a>
+				<button type="submit" class="btn btn-info">Logout</button>
+			</div>
+		</form>
+		{{end}}*/}}
+  </footer>
 </div>
+
+</div><!--/.container-->
 {{/*{{if eq .RunMode "dev"}} {{template "debug.html" .}} {{end}}*/}}
 </body>
 </html>
