--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,7 +3,7 @@
 <head>
   <title>Simon's Blog{{with .title}} - {{.}}{{end}}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Simon Peter Grätzer" />
   <meta name="keywords" content="{{if .title}}{{.title}}{{else}}iOS, Android, Go, GoLang, Java, OpenGL, C++{{end}}" />
   <meta name="description" content="A blog on iOS, Android, GoLang, 3D Graphics and similar topics" />
@@ -11,14 +11,21 @@
   <link rel="shortcut icon" type="image/png" href="/public/img/favicon.png" />
   <link rel="alternate" type="application/rss+xml" title="Feed of Simon's blog" href="/feed.rss" />
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/default.min.css">
-  <link rel="stylesheet" type="text/css" href="/public/css/custom.css" /> {{range .moreStyles}}
-  <link rel="stylesheet" type="text/css" href="{{.}}" />{{end}}
+  <!-- CSS only -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
-  <script async src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js" onLoad="hljs.initHighlightingOnLoad()"></script>
-  <script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script defer src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <!-- JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>-->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
+  
+  <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/default.min.css">
+  <script async src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/highlight.min.js"></script>
+  
+  <link rel="stylesheet" type="text/css" href="/public/css/custom.css" /> 
+  {{range .moreStyles}}<link rel="stylesheet" type="text/css" href="{{.}}" />{{end}}
+
   {{range .moreScripts}}<script defer src="{{.}}"></script>{{end}}
   <script>
     (function(i, s, o, g, r, a, m) {
@@ -38,5 +45,5 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container">
     {{template "menu.html" .}} {{template "flash.html" .}}
