--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -35,14 +35,25 @@ footer {
 #stays-list img {
   width: 100%;
 }
-#stays-list .row {
-  padding-top: 5px;
+#stays-list.row {
+  padding: 10px 0 0 10px;
   border-radius: 4px;
 }
-#stays-list .row:hover {
+#stays-list.row:hover {
   background-color: #EEE;
 }
-#stays-list .row.active, #stays-list .row.active a {
+#stays-list.row.active, #stays-list.row.active a {
   color: #fff;
   background-color: #337AB7;
+}
+#project-list img {
+  max-width: 100%;
+  max-height: 250px;
+}
+#project-list .card {
+  margin-top: 15px;
+}
+.pattern {
+  width:100%;
+  height:150px;
 }
